# offboard

./: CMakeLists.txt  README.md  package.xml
launch/: warehouse.launch
models/typhoon_h480/: typhoon_h480.sdf  typhoon_h480.sdf.last_generated
src/: control_station.py  offboard_control.cpp
worlds/: inventory.world
